--- a/web/pom.xml
+++ b/web/pom.xml
@@ -117,6 +117,20 @@
             <artifactId>spring-boot-devtools</artifactId>
         </dependency>
 
+        <!-- Spring Session -->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session</artifactId>
+            <version>1.3.0.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-mongo</artifactId>
+            <version>1.3.0.RELEASE</version>
+            <type>pom</type>
+        </dependency>
+
+
         <!-- Apache CXF -->
         <dependency>
             <groupId>org.apache.cxf</groupId>
